Fix bug where header flickers when going to 'about me' section. Fix bug where smooth scroll clicking on looks stop working when window is resized. Fix bug where clicking a smooth scrolling link to under the 'about me' section would not scroll to the correct section.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -72,12 +72,15 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 1.6rem 2rem;
-  transition: padding .1s ease;
   background-color: #fdfdfd;
 }
 
 header.mini {
   padding: .6rem 2rem;
+}
+
+header.transition {
+  transition: padding .1s ease;
 }
 
 header a {
@@ -641,6 +644,9 @@ section.contact .contact-email a span {
     background: linear-gradient(to top, #ae1109, #d92626);
     flex-direction: column;
     padding: 30px 0;
+  }
+  section.about .about-section {
+    min-height: 75vh;
   }
   section.about .about-section p {
     margin-bottom: 1.6rem;
