--- a/src/styles/_mobile.scss
+++ b/src/styles/_mobile.scss
@@ -68,6 +68,9 @@
 			flex-direction: column;
 			padding: 30px 0;
 			
+			.about-section {
+				min-height: 75vh;
+			}
 			.about-section p {
 				margin-bottom: $line-height;
 			}
